Cadastro de eventos e botões print

--- a/frontend/src/componentes/layout/Button.css
+++ b/frontend/src/componentes/layout/Button.css
@@ -1,6 +1,6 @@
 button {
     transition-duration: 0.4s;
-    background-color: #11ffee00; /* Green */
+    background-color: black; /* Black */
     border: none;
     color: white;
     padding: 10px 22px;
