Funcionalidade para excluir evento

--- a/frontend/src/componentes/layout/Button.css
+++ b/frontend/src/componentes/layout/Button.css
@@ -16,3 +16,8 @@ button {
     background-color: #4CAF50; /* Green */
     color: white;
   }
+
+#delete_button:hover {
+  background-color: red;
+  color: white;
+}
